Spacing issue fixed

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -80,3 +80,13 @@ h6{
 .thin-scrollbar::-webkit-scrollbar {
     width: 0.5rem;
 }
+
+/**
+Spaicing
+**/
+.heading-spacing{
+    @apply mb-8 lg:mb-10;
+}
+.section-spacing{
+    @apply mb-14 lg:mb-20;
+}
